--- a/src/app/flux-choice/flux-choice.component.html
+++ b/src/app/flux-choice/flux-choice.component.html
@@ -4,37 +4,38 @@
 </app-flux-status-header>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-12 col-sm-5 offset-sm-1 flux-choice--description">
+    <div class="col-12 offset-sm-1 col-sm-10 col-md-4 flux-choice--description">
       Para calcular una solución adecuada para la financiación para tu proyecto, queremos conocer sobre tu proceso
       <span class="openSansBold">¿Haz encontrado a un instalador?</span>
     </div>
   </div>
   <div class="row">
-    <div class="col-12">
-      <div class="flux-choice__options">
-        <div class="flux-choice__option">
-          <button class="flux-choice__btn flux-choice__btn--yellow"
-            (click)="goToChoiceOne()">
-            Ya tengo una cotización
-          </button>
-          <a class="flux-choice__link flux-choice__link--yellow"
-             (click)="goToChoiceOne()">
-              Y quiero financiarla
-          </a>
-        </div>
-        <div class="flux-choice__option">
-          <button class="flux-choice__btn flux-choice__btn--violet"
-            (click)="goToChoiceTwo()">
-            Aún no tengo una cotización
-          </button>
-          <a class="flux-choice__link flux-choice__link--violet"
-             (click)="goToChoiceTwo()">
-              Y quiero obtenerla
-          </a></div>
+    <div class="col-12 offset-md-1 col-md-5">
+      <div class="flux-choice__option">
+        <button class="flux-choice__btn flux-choice__btn--yellow"
+                (click)="goToChoiceOne()">
+          Ya tengo una cotización
+        </button>
+        <a class="flux-choice__link flux-choice__link--yellow"
+           (click)="goToChoiceOne()">
+          Y quiero financiarla
+        </a>
+      </div>
+    </div>
+    <div class="col-12 col-md-5">
+      <div class="flux-choice__option">
+        <button class="flux-choice__btn flux-choice__btn--violet"
+                (click)="goToChoiceTwo()">
+          Aún no tengo una cotización
+        </button>
+        <a class="flux-choice__link flux-choice__link--violet"
+           (click)="goToChoiceTwo()">
+          Y quiero obtenerla
+        </a>
       </div>
     </div>
   </div>
-  <div class="row">
+  <div class="row flux-choice__bottom">
     <div class="col-12 col-sm-5 offset-sm-1">
       <button class="btn btn-link btn-navigation btn-navigation--violet-left"
               (click)="goBack()"></button>
