--- a/src/app/flux-status-header/flux-status-header.component.html
+++ b/src/app/flux-status-header/flux-status-header.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid flux-status-container">
   <div class="row">
-    <div class="col-12 col-sm-5 offset-sm-1 flux-status-container__title" [innerHTML]="fluxTitle">
+    <div class="col-12 offset-sm-1 col-md-5 offset-md-1 flux-status-container__title" [innerHTML]="fluxTitle">
     </div>
-    <div class="col-12 offset-sm-1 col-sm-4 flux-status-container__progress">
+    <div class="col-12 offset-md-1 col-md-4 flux-status-container__progress">
       <div class="flux-status-container__progress--{{fluxStep}}"></div>
     </div>
   </div>
