--- a/src/app/welcome-screen-one/welcome-screen-one.component.html
+++ b/src/app/welcome-screen-one/welcome-screen-one.component.html
@@ -5,7 +5,7 @@
     tu proyecto para contarte todos los beneficios
     que puedes obtener de manera personalizada
   </div>
-  <div class="container-fluid">
+  <div class="container-fluid welcome-one__bottom">
     <div class="row">
       <div class="col-12 col-md-11 text-end">
         <button class="btn btn-link btn-navigation btn-navigation--white-right"
