--- a/src/app/welcome-screen-two/welcome-screen-two.component.html
+++ b/src/app/welcome-screen-two/welcome-screen-two.component.html
@@ -13,7 +13,7 @@
     más reciente, allí encontrarás la información necesaria<br/>
     para responder las siguientes preguntas
   </div>
-  <div class="container-fluid">
+  <div class="container-fluid welcome-two__bottom">
     <div class="row">
       <div class="col-12 col-md-11 text-end">
         <button class="btn btn-link btn-navigation btn-navigation--white-right" (click)="continue()"></button>
