--- a/src/app/flux-choice-one/flux-choice-one.component.sass
+++ b/src/app/flux-choice-one/flux-choice-one.component.sass
@@ -17,9 +17,25 @@
     flex-direction: column
     align-items: center
     width: 70%
+  &__col
+    text-align: right
 
 // overrides
 .color-lup--yellow
   color: $lup-yellow !important
 .color-lup--violet-light
   color: $lup-violet-light !important
+.lup-form
+  &__field
+    label
+      width: 80%
+      &.mandatory
+        width: auto
+
+@media (max-width: $lg)
+  .lup-form
+    label
+      text-align: left !important
+  .flux-one
+    &__col
+      text-align: left !important
