--- a/src/app/initial-data/initial-data.component.sass
+++ b/src/app/initial-data/initial-data.component.sass
@@ -1,4 +1,5 @@
 @import "src/styles/styles"
+$background-violet: transparent linear-gradient(270deg, #510CA8 0%, #2B054A 100%) 0% 0% no-repeat padding-box
 
 .initial-data
   &__container
@@ -8,7 +9,9 @@
     >*
       position: absolute
       width: 100%
-      height: 100vh
+      // height: 100vh
+    &--7
+      background: $background-violet
   &__screen
     &-3, &-4, &-5, &-6, &-8, &-9, &-11
       background: white
