--- a/src/app/loading-screen/loading-screen.component.html
+++ b/src/app/loading-screen/loading-screen.component.html
@@ -6,7 +6,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-12 offset-md-1 col-md-10">
+    <div class="col-10 offset-1">
       <div class="loading-screen__subtitle">
         De acuerdo a los datos que has proporcionado nuestro sistema está calculando la factibilidad de financiamiento para tu proyecto solar y presentarte las
         <span class="openSansBold">alternativas adecuadas</span>
@@ -24,6 +24,7 @@
   <div class="row loading-screen__row">
     <div class="col-12 loading-screen__btn text-end">
       <button class="btn btn-link btn-navigation btn-navigation--white-right"
+              *ngIf="!isLoading"
               (click)="continue()"></button>
     </div>
   </div>
