--- a/src/app/flux-choice-one/flux-choice-one.component.html
+++ b/src/app/flux-choice-one/flux-choice-one.component.html
@@ -4,10 +4,10 @@
 </app-flux-status-header>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-12 offset-md-1 col-md-10">
+    <div class="col-10 offset-1 col-md-10">
       <div class="flux-one__header"></div>
     </div>
-    <div class="col-12 text-center">
+    <div class="col-10 text-center">
       <div class="flux-one__title">¿Quién es tu proveedor de paneles solares?</div>
     </div>
   </div>
@@ -16,12 +16,12 @@
     <div class="lup-form">
       <div class="lup-form__field">
         <div class="row">
-          <div class="col-12 offset-sm-1 col-sm-10 col-lg-6 col-xl-6 col-xxl-5 flux-one__col">
+          <div class="col-10 offset-1 col-sm-10 col-lg-6 col-xl-6 col-xxl-5 flux-one__col">
             <label for="input1">
               Nombre de la empresa
             </label>
           </div>
-          <div class="col-12 offset-sm-1 col-sm-10 offset-lg-0 col-lg-5 col-xl-4 col-xxl-5">
+          <div class="col-10 offset-1 col-sm-10 offset-lg-0 col-lg-5 col-xl-4 col-xxl-5">
             <input id="input1"
                    class="lup-form__input"
                    type="text"
@@ -38,14 +38,14 @@
     <div class="lup-form">
       <div class="lup-form__field lup-form__field--mandatory">
         <div class="row">
-          <div class="col-12 offset-sm-1 col-sm-10 col-lg-6 col-xl-6 col-xxl-5 flux-one__col">
+          <div class="col-10 offset-1 col-sm-10 col-lg-6 col-xl-6 col-xxl-5 flux-one__col">
             <label for="input2">
               ¿Cuánta energía <span class="color-lup--yellow">mensual</span> generaría<br/>
               tu proyecto en kilovatio/hora <span class="color-lup--violet-light">(kWh)</span>?
             </label>
             <label class="mandatory">*<br>&nbsp;</label>
           </div>
-          <div class="col-12 offset-sm-1 col-sm-10 offset-lg-0 col-lg-5 col-xl-4 col-xxl-5">
+          <div class="col-10 offset-1 col-sm-10 offset-lg-0 col-lg-5 col-xl-4 col-xxl-5">
             <input id="input2"
                    class="lup-form__input"
                    type="text"
@@ -64,14 +64,14 @@
     <div class="lup-form">
       <div class="lup-form__field lup-form__field--mandatory">
         <div class="row">
-          <div class="col-12 offset-sm-1 col-sm-10 col-lg-6 col-xl-6 col-xxl-5 flux-one__col">
+          <div class="col-10 offset-1 col-sm-10 col-lg-6 col-xl-6 col-xxl-5 flux-one__col">
             <label for="input3">
               Ingresa el precio total<br/>
               del proyecto a financiar
             </label>
             <label class="mandatory">*<br>&nbsp;</label>
           </div>
-          <div class="col-12 offset-sm-1 col-sm-10 offset-lg-0 col-lg-5 col-xl-4 col-xxl-5">
+          <div class="col-10 offset-1 col-sm-10 offset-lg-0 col-lg-5 col-xl-4 col-xxl-5">
             <input id="input3"
                    class="lup-form__input"
                    type="text"
@@ -86,11 +86,11 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-12 col-sm-5 offset-sm-1">
+    <div class="col-10 offset-1 col-sm-5 flux-one__bottom">
       <button class="btn btn-link btn-navigation btn-navigation--violet-left"
               (click)="goBack()"></button>
     </div>
-    <div class="col-12 col-sm-5 text-end">
+    <div class="col-10 offset-1 offset-sm-0 col-sm-5 text-end">
       <div
         *ngIf="!isValidData()"
         class="form-alert">* Para continuar completa el formulario
