--- a/src/app/final-screen/final-screen.component.html
+++ b/src/app/final-screen/final-screen.component.html
@@ -10,7 +10,7 @@
   </div>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-12 offset-md-1 col-md-5">
+      <div class="col-10 offset-1 col-md-5">
         <div class="final-screen__confirmation">
           Hemos enviado una<br>
           confirmación a tu e-mail
@@ -23,7 +23,7 @@
           No me llegó el mensaje
         </button>
       </div>
-      <div class="col-12 col-md-5 text-end">
+      <div class="col-10 offset-1 offset-sm-0 col-md-5 text-end">
         <button class="btn btn-link btn-navigation btn-navigation--white-left"
                 (click)="back()">
         </button>
