--- a/src/app/initial-data/initial-data.component.sass
+++ b/src/app/initial-data/initial-data.component.sass
@@ -10,7 +10,7 @@ $background-violet: transparent linear-gradient(270deg, #510CA8 0%, #2B054A 100%
       position: absolute
       width: 100%
       // height: 100vh
-    &--2, &--7
+    &--2, &--7, &--10
       background: $background-violet
   &__screen
     &-3, &-4, &-5, &-6, &-8, &-9, &-11
