--- a/src/app/energy-screen/energy-screen.component.html
+++ b/src/app/energy-screen/energy-screen.component.html
@@ -51,7 +51,7 @@
             </div>
             <div class="col-12 col-xl-5">
               <input id="input2" class="lup-form__input"
-                     type="text" placeholder="181kWh"
+                     type="text" placeholder="181"
                      inputmode="numeric"
                      pattern="[0-9]*"
                      digitOnly
