--- a/src/app/flux-choice-one/flux-choice-one.component.html
+++ b/src/app/flux-choice-one/flux-choice-one.component.html
@@ -53,6 +53,7 @@
                    inputmode="numeric"
                    pattern="[0-9]*"
                    digitOnly
+                   [decimal]="true"
                    [(ngModel)]="monthlyProducedEnergy"/>
           </div>
         </div>
