fixed small things

--- a/src/app/energy-screen/energy-screen.component.html
+++ b/src/app/energy-screen/energy-screen.component.html
@@ -55,6 +55,7 @@
                      inputmode="numeric"
                      pattern="[0-9]*"
                      digitOnly
+                     [decimal]="true"
                      [(ngModel)]="lastMonthEnergyUsage"/>
             </div>
           </div>
